--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -1,8 +1,9 @@
-name: CI Pipeline
+name: Build and deploy Node.js app with OpenTelemetry tracing
 
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -10,59 +11,160 @@ jobs:
     outputs:
       trace_id: ${{ steps.start_trace.outputs.trace_id }}
       parent_span_id: ${{ steps.start_trace.outputs.parent_span_id }}
+
     steps:
-      - name: Checkout Code
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: Start Build Trace
-        id: start_trace
+      - name: ⚙️ Set Secrets as Env Variables
         run: |
-          node trace-cli.js start --step="build" > trace_output.txt
-          echo "trace_id=$(grep trace_id trace_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
+          echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
+          echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
+          echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
-      - name: Start Install Dependencies
-        id: start_install
+      - name: ⬇️ Install Trace CLI Dependencies
         run: |
-          node trace-cli.js start-child --step="Install Dependencies" --trace-id=${{ steps.start_trace.outputs.trace_id }} --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} > install_output.txt
-          echo "span_id=$(grep span_id install_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
+          npm install @opentelemetry/sdk-node \
+                      @opentelemetry/api \
+                      @opentelemetry/resources \
+                      @opentelemetry/semantic-conventions \
+                      @opentelemetry/exporter-trace-otlp-proto \
+                      node-fetch \
+                      dotenv \
+                      winston
 
-      - name: Install Dependencies
+      - id: start_trace
+        name: 🚀 Start Build Trace
+        run: |
+          node trace-cli.js start --step=build > trace_output.txt
+          cat trace_output.txt
+          echo "trace_id=$(grep trace_id trace_output.txt | cut -d '=' -f2)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d '=' -f2)" >> $GITHUB_OUTPUT
+
+      - name: 📦 Install App Dependencies (Start)
+        run: |
+          node trace-cli.js start-child --step="Install Dependencies" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+               --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
+
+      - name: 📦 Install App Dependencies (Execute)
         run: npm install
 
-      - name: End Install Dependencies
+      - name: 📦 Install App Dependencies (End)
         run: |
-          node trace-cli.js end-child --step="Install Dependencies" --trace-id=${{ steps.start_trace.outputs.trace_id }} --span-id=${{ steps.start_install.outputs.span_id }}
+          node trace-cli.js end-child --step="Install Dependencies" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
 
-      - name: End Build Trace
-        run: node trace-cli.js end --step="Build Done"
+      - name: 🧪 Build and Test (Start)
+        run: |
+          node trace-cli.js start-child --step="Build and Test" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+               --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
+
+      - name: 🧪 Build and Test (Execute)
+        run: |
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: 🧪 Build and Test (End)
+        run: |
+          node trace-cli.js end-child --step="Build and Test" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
+
+      - name: 🗜️ Zip Release (Start)
+        run: |
+          node trace-cli.js start-child --step="Zip Artifact" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+               --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
+
+      - name: 🗜️ Zip Release (Execute)
+        run: zip release.zip . -r -x "node_modules/*" -x ".git/*"
+
+      - name: 🗜️ Zip Release (End)
+        run: |
+          node trace-cli.js end-child --step="Zip Artifact" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
+
+      - name: ⬆️ Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
+
+      - name: 🛑 End Build Trace
+        run: |
+          node trace-cli.js end --step=Build \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      - name: Checkout Code
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: Start Deploy Trace
-        id: start_deploy
+      - name: ⚙️ Set Secrets as Env Variables
         run: |
-          node trace-cli.js start --step="deploy" > trace_output.txt
-          echo "trace_id=$(grep trace_id trace_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
+          echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
+          echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
+          echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
-      - name: Start Azure Deployment
-        id: start_az
+      - name: ⬇️ Install Trace CLI Dependencies
         run: |
-          node trace-cli.js start-child --step="Azure Deployment" --trace-id=${{ steps.start_deploy.outputs.trace_id }} --parent-span-id=${{ steps.start_deploy.outputs.parent_span_id }} > az_output.txt
-          echo "span_id=$(grep span_id az_output.txt | cut -d'=' -f2)" >> $GITHUB_OUTPUT
+          npm install @opentelemetry/sdk-node \
+                      @opentelemetry/api \
+                      @opentelemetry/resources \
+                      @opentelemetry/semantic-conventions \
+                      @opentelemetry/exporter-trace-otlp-proto \
+                      node-fetch \
+                      dotenv \
+                      winston
 
-      - name: Azure Deploy Task
-        run: echo "Pretending to deploy..."
-
-      - name: End Azure Deployment
+      - id: start_trace
+        name: 🚀 Start Deploy Trace
         run: |
-          node trace-cli.js end-child --step="Azure Deployment" --trace-id=${{ steps.start_deploy.outputs.trace_id }} --span-id=${{ steps.start_az.outputs.span_id }}
+          node trace-cli.js start --step=deploy > trace_output.txt
+          cat trace_output.txt
+          echo "trace_id=$(grep trace_id trace_output.txt | cut -d '=' -f2)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d '=' -f2)" >> $GITHUB_OUTPUT
 
-      - name: End Deploy Trace
-        run: node trace-cli.js end --step="Deploy Done"
+      - name: 📥 Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: 📂 Unzip Artifact (Start)
+        run: |
+          node trace-cli.js start-child --step="Unzip Artifact" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+               --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
+
+      - name: 📂 Unzip Artifact (Execute)
+        run: unzip -o release.zip
+
+      - name: 📂 Unzip Artifact (End)
+        run: |
+          node trace-cli.js end-child --step="Unzip Artifact" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
+
+      - name: 🚀 Deploy to Azure (Start)
+        run: |
+          node trace-cli.js start-child --step="Azure Deployment" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+               --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
+
+      - name: 🚀 Deploy to Azure (Execute)
+        run: |
+          echo "Deploying to Azure..."
+          echo "Deployment complete."
+
+      - name: 🚀 Deploy to Azure (End)
+        run: |
+          node trace-cli.js end-child --step="Azure Deployment" \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
+
+      - name: 🛑 End Deploy Trace
+        run: |
+          node trace-cli.js end --step=Deploy \
+               --trace-id=${{ steps.start_trace.outputs.trace_id }}
