--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -37,8 +37,9 @@ jobs:
         name: 🚀 Start Build Trace
         run: |
           node trace-cli.js start --step=build | tee trace_output.txt
-          echo "trace_id=$(grep trace_id trace_output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat trace_output.txt
+          echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - id: install_start
         name: 📦 Install Dependencies (Start)
@@ -46,7 +47,8 @@ jobs:
           node trace-cli.js start-child --step="Install Dependencies" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
-          echo "span_id=$(grep span_id output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 📦 Install Dependencies (Execute)
         run: npm install
@@ -63,7 +65,8 @@ jobs:
           node trace-cli.js start-child --step="Build and Test" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
-          echo "span_id=$(grep span_id output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 🧪 Build and Test (Execute)
         run: |
@@ -82,7 +85,8 @@ jobs:
           node trace-cli.js start-child --step="Zip Artifact" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
-          echo "span_id=$(grep span_id output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 🗜️ Zip Release (Execute)
         run: zip release.zip . -r -x "node_modules/*" -x ".git/*"
@@ -134,8 +138,9 @@ jobs:
         name: 🚀 Start Deploy Trace
         run: |
           node trace-cli.js start --step=deploy | tee trace_output.txt
-          echo "trace_id=$(grep trace_id trace_output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$(grep parent_span_id trace_output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat trace_output.txt
+          echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
@@ -148,7 +153,8 @@ jobs:
           node trace-cli.js start-child --step="Unzip Artifact" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
-          echo "span_id=$(grep span_id output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 📂 Unzip Artifact (Execute)
         run: unzip -o release.zip
@@ -165,7 +171,8 @@ jobs:
           node trace-cli.js start-child --step="Azure Deployment" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
-          echo "span_id=$(grep span_id output.txt | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          cat output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 🚀 Deploy to Azure (Execute)
         run: |
