--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -11,16 +11,9 @@ jobs:
     outputs:
       trace_id: ${{ steps.start_trace.outputs.trace_id }}
       parent_span_id: ${{ steps.start_trace.outputs.parent_span_id }}
-
     steps:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
-
-      - name: ⚙️ Set Secrets as Env Variables
-        run: |
-          echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
-          echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
-          echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
       - name: ⬇️ Install Trace CLI Dependencies
         run: |
@@ -36,52 +29,42 @@ jobs:
       - id: start_trace
         name: 🚀 Start Build Trace
         run: |
-          node trace-cli.js start --step=build | tee trace_output.txt
-          cat trace_output.txt
+          node trace-cli.js start --step=build > trace_output.txt
           echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
           echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
-      - name: 📦 Install Dependencies (Traced)
+      # Child step (example: Install Dependencies)
+      - id: install_start
+        name: 📦 Install Dependencies (Start)
         run: |
           node trace-cli.js start-child --step="Install Dependencies" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
-            --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
-          npm install
+            --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} > output.txt
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
-      - name: 🧪 Build and Test (Traced)
+      - name: 📦 Install Dependencies (Execute)
+        run: npm install
+
+      - name: 📦 Install Dependencies (End)
         run: |
-          node trace-cli.js start-child --step="Build and Test" \
+          node trace-cli.js end-child --step="Install Dependencies" \
+            --trace-id=${{ steps.start_trace.outputs.trace_id }} \
+            --span-id=${{ steps.install_start.outputs.span_id }}
+
+      # Repeat for each build/test/zip/etc step (same as above, always passing parent_span_id from start_trace step)
+
+      - name: 🛑 End Build Trace
+        run: |
+          node trace-cli.js end --step=build \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: 🗜️ Zip Release (Traced)
-        run: |
-          node trace-cli.js start-child --step="Zip Artifact" \
-            --trace-id=${{ steps.start_trace.outputs.trace_id }} \
-            --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
-          zip release.zip . -r -x "node_modules/*" -x ".git/*"
-
-      - name: ⬆️ Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
-
-      - name: ⚙️ Set Secrets as Env Variables
-        run: |
-          echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
-          echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
-          echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
       - name: ⬇️ Install Trace CLI Dependencies
         run: |
@@ -97,27 +80,6 @@ jobs:
       - id: start_trace
         name: 🚀 Start Deploy Trace
         run: |
-          node trace-cli.js start --step=deploy | tee trace_output.txt
-          cat trace_output.txt
+          node trace-cli.js start --step=deploy > trace_output.txt
           echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
-
-      - name: 📥 Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: 📂 Unzip Artifact (Traced)
-        run: |
-          node trace-cli.js start-child --step="Unzip Artifact" \
-            --trace-id=${{ steps.start_trace.outputs.trace_id }} \
-            --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
-          unzip -o release.zip
-
-      - name: 🚀 Deploy to Azure (Traced)
-        run: |
-          node trace-cli.js start-child --step="Azure Deployment" \
-            --trace-id=${{ steps.start_trace.outputs.trace_id }} \
-            --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }}
-          echo "Deploying to Azure..."
-          echo "Deployment complete."
+          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d_
